--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <!-- 2 -->
       <section class="hero-section list">
-        <div class="container">
+        <div class="container cont-tabl">
           <h2 class="visually-hidden">Text</h2>
           <ul class="hero list">
             <li class="hero-list-item">
@@ -351,7 +351,7 @@
 
     <!-- footer -->
     <footer class="footer-section">
-      <div class="foot-main container container-foot">
+      <div class="container container-foot">
         <div class="foot-one">
           <a href="#" class="foot link" target="_blank"
             >Web<span class="logotup-footer link">Studio</span></a
@@ -422,7 +422,6 @@
       </div>
     </footer>
 
-    <!-- is-hidden -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
