--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
           <h2 class="hero-title">What are we doing</h2>
           <ul class="hero-doing list">
             <li class="working">
-              <img src="./images/img-1.jpg" alt="Work1" width="360" height="300" />
+              <img src="./images/Rectangle3opt.jpg" alt="Work1" width="360" height="300" />
             </li>
             <li class="working">
-              <img src="./images/img-2.jpg" alt="work2" width="360" height="300" />
+              <img src="./images/Rectangle2opt.jpg" alt="work2" width="360" height="300" />
             </li>
             <li class="working">
-              <img src="./images/img-3.jpg" alt="work3" width="360" height="300" />
+              <img src="./images/Rectangle1opt.jpg" alt="work3" width="360" height="300" />
             </li>
           </ul>
         </div>
@@ -145,7 +145,7 @@
           <h2 class="hero-title">Our Team</h2>
           <ul class="hero-team list">
             <li class="team-name">
-              <img src="./images/img-7.jpg" alt="Product Designer" width="264" />
+              <img src="./images/img-11.jpg" alt="Product Designer" width="264" />
               <div class="team-prof">
                 <h3 class="third-title">Mark Guerrero</h3>
                 <p class="hero-description">Product Designer</p>
@@ -182,7 +182,7 @@
               </div>
             </li>
             <li class="team-name">
-              <img src="./images/img-6.jpg" alt="Frontend Developer" width="264" />
+              <img src="./images/img-22.jpg" alt="Frontend Developer" width="264" />
               <div class="team-prof">
                 <h3 class="third-title">Tom Ford</h3>
                 <p class="hero-description">Frontend Developer</p>
@@ -219,7 +219,7 @@
               </div>
             </li>
             <li class="team-name">
-              <img src="./images/img-5.jpg" alt="Marketing" width="264" />
+              <img src="./images/img-44.jpg" alt="Marketing" width="264" />
               <div class="team-prof">
                 <h3 class="third-title">Camila Garcia</h3>
                 <p class="hero-description">Marketing</p>
@@ -256,7 +256,7 @@
               </div>
             </li>
             <li class="team-name">
-              <img src="./images/img-4.jpg" alt="UI Designer" width="264" />
+              <img src="./images/img-33.jpg" alt="UI Designer" width="264" />
               <div class="team-prof">
                 <h3 class="third-title">Daniel Wilson</h3>
                 <p class="hero-description">UI Designer</p>
