--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
             </li>
             
             <li class="working">
-              <picture>
-                <source srcset="./images/img-3.jpg 1x, ./images/rect-2.jpg 2x" >
-                <img src="./images/img-3.jpg" alt="work3" width="360" height="300" />
-              </picture>
+                <picture>
+                  <source srcset="./images/pict.jpg 1x, ./images/rect-2.jpg 2x">
+                  <img src="./images/pict.jpg" alt="work3" width="360" height="300" />
+               </picture>
               </li>
           </ul>
         </div>
