--- a/index.html
+++ b/index.html
@@ -140,13 +140,14 @@
                 <img src="./images/tel.jpg" alt="work2" width="360" height="300" />
              </picture>
             </li>
-            
+
             <li class="working">
-                <picture>
-                  <source srcset="./images/pict.jpg 1x, ./images/rect-2.jpg 2x">
-                  <img src="./images/pict.jpg" alt="work3" width="360" height="300" />
-               </picture>
-              </li>
+              <picture>
+                <source srcset="./images/mobile.jpg 1x, ./images/mobile1.jpg 2x">
+                <img src="./images/mobile.jpg" alt="work3" width="360" height="300" />
+             </picture>
+            </li>
+          
           </ul>
         </div>
       </section>
